force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Minimum_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>refedge__Minimum_Sales_Stage__c</fullName>
    <description>Sales requests can only be made for Opportunities that are AT or PAST this sales stage.</description>
    <inlineHelpText>Sales requests can only be made for Opportunities that are AT or PAST this sales stage.</inlineHelpText>
    <label>Minimum Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informed of Potential Cancellation</fullName>
            </value>
            <value>
                <fullName>Discussing with Customer</fullName>
            </value>
            <value>
                <fullName>Engaged in Remediation</fullName>
            </value>
            <value>
                <fullName>Final Negotiations</fullName>
            </value>
            <value>
                <fullName>ACV Outcome Certain</fullName>
            </value>
            <value>
                <fullName>Management Approval</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed - No Decision</fullName>
            </value>
            <value>
                <fullName>Recurring Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Avoided Cancellation</fullName>
            </value>
            <value>
                <fullName>Closed Won Adjustment</fullName>
            </value>
            <value>
                <fullName>Waiting for Finance to send bill</fullName>
            </value>
            <value>
                <fullName>Waiting for payment</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed without change</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed with User Increase</fullName>
            </value>
            <value>
                <fullName>Closed - Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Superseded New Contract</fullName>
            </value>
            <value>
                <fullName>Recurring Adjustment</fullName>
            </value>
            <value>
                <fullName>Closed - Billing Restarted</fullName>
            </value>
            <value>
                <fullName>Closed - Should Never have been opened</fullName>
            </value>
            <value>
                <fullName>Processing Pause</fullName>
            </value>
            <value>
                <fullName>Closed - Merged</fullName>
            </value>
            <value>
                <fullName>CS Review</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Billing Pause</fullName>
            </value>
            <value>
                <fullName>Billing Pause Approved</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>