force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Mixed_manage_request_settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Mixed_manage_request_settings__c</fullName>
    <description>Determine what attributes and custom fields will appear on each request type form for managed requests.</description>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;RequestSettingMatrix?customSettingId=&apos;+Id+&apos;&amp;isContentSetting=false&apos;, &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <inlineHelpText>Determine what attributes and custom fields will appear on each request type form for managed requests.</inlineHelpText>
    <label>Managed Request Settings</label>
    <type>Text</type>
</CustomField>