force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Next_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Next_Notification_Date__c</fullName>
    <description>Indicates when the next point summary notifications will be sent to users.</description>
    <inlineHelpText>Indicates when the next point summary notifications will be sent to users.</inlineHelpText>
    <label>Next Notification Date</label>
    <type>Date</type>
</CustomField>