force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Next_Refresh_launch_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Next_Refresh_launch_Date__c</fullName>
    <description>Indicates when the next requests for Profiles Updates will be sent automatically.</description>
    <inlineHelpText>Indicates when the next requests for Profiles Updates will be sent automatically.</inlineHelpText>
    <label>Next Update Launch Date</label>
    <type>Date</type>
</CustomField>