force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Accepted_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Accepted_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the Nominator when the Account / Contact they nominated is accepted as a Reference Program Member.</inlineHelpText>
    <label>Nomination Accepted Email</label>
    <type>Checkbox</type>
</CustomField>