force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable the Chatter sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
    <label>Nomination Chatter</label>
    <type>Checkbox</type>
</CustomField>