force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the email sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
    <label>Nomination Email</label>
    <type>Checkbox</type>
</CustomField>