force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Rejected_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Rejected_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</inlineHelpText>
    <label>Nomination Rejected Chatter</label>
    <type>Checkbox</type>
</CustomField>