force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Rejected_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Rejected_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</description>
    <inlineHelpText>Enables the slack message sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</inlineHelpText>
    <label>Nomination Rejected Slack</label>
    <type>Checkbox</type>
</CustomField>