force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Nomination_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</description>
    <inlineHelpText>Enables the slack message sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
    <label>Nomination Slack</label>
    <type>Checkbox</type>
</CustomField>