force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Notification_Settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Notification_Settings__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;EmailChatterSettings?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <label>Notification Settings</label>
    <type>Text</type>
</CustomField>