force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Opportunity_Closed_Stages__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity_Closed_Stages__c</fullName>
    <inlineHelpText>The Data Collector notification will be sent to the Opportunity Owner at this Stage (if the Opportunity meets the Minimum Opportunity Size value).</inlineHelpText>
    <label>Opportunity Closed Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informed of Potential Cancellation</fullName>
            </value>
            <value>
                <fullName>Discussing with Customer</fullName>
            </value>
            <value>
                <fullName>Engaged in Remediation</fullName>
            </value>
            <value>
                <fullName>Final Negotiations</fullName>
            </value>
            <value>
                <fullName>ACV Outcome Certain</fullName>
            </value>
            <value>
                <fullName>Management Approval</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed - No Decision</fullName>
            </value>
            <value>
                <fullName>Recurring Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Avoided Cancellation</fullName>
            </value>
            <value>
                <fullName>Closed Won Adjustment</fullName>
            </value>
            <value>
                <fullName>Waiting for Finance to send bill</fullName>
            </value>
            <value>
                <fullName>Waiting for payment</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed without change</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed with User Increase</fullName>
            </value>
            <value>
                <fullName>Closed - Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Superseded New Contract</fullName>
            </value>
            <value>
                <fullName>Recurring Adjustment</fullName>
            </value>
            <value>
                <fullName>Closed - Billing Restarted</fullName>
            </value>
            <value>
                <fullName>Closed - Should Never have been opened</fullName>
            </value>
            <value>
                <fullName>Processing Pause</fullName>
            </value>
            <value>
                <fullName>Closed - Merged</fullName>
            </value>
            <value>
                <fullName>CS Review</fullName>
            </value>
            <value>
                <fullName>Business Case Development</fullName>
                <isActive>false</isActive>
                <label>Business Case Development</label>
            </value>
            <value>
                <fullName>Evaluation of Options</fullName>
                <isActive>false</isActive>
                <label>Evaluation of Options</label>
            </value>
            <value>
                <fullName>Expression of Interest</fullName>
                <isActive>false</isActive>
                <label>Expression of Interest</label>
            </value>
            <value>
                <fullName>Get Management Approval</fullName>
                <isActive>false</isActive>
                <label>Get Management Approval</label>
            </value>
            <value>
                <fullName>Id. Decision Makers</fullName>
                <isActive>false</isActive>
                <label>Id. Decision Makers</label>
            </value>
            <value>
                <fullName>Investigation</fullName>
                <isActive>false</isActive>
                <label>Investigation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>