force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Opportunity_Closed_Won_Stage__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity_Closed_Won_Stage__c</fullName>
    <label>Opportunity Closed Won Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Recurring Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - Billing Restarted</fullName>
            </value>
            <value>
                <fullName>Closed Won Adjustment</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed without change</fullName>
            </value>
            <value>
                <fullName>Closed - Renewed with User Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>