force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Organization_FiscalYearStartMonth__c.field-meta.xml
<CustomField>
    <fullName>refedge__Organization_FiscalYearStartMonth__c</fullName>
    <label>Organization Fiscal Year Start Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>