force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__P2P_Approve_Without_Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__P2P_Approve_Without_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for approval of a Peer 2 Peer request without selecting a Contact. “Select Inactive Contacts” must also be enabled to enable this functionality.</description>
    <inlineHelpText>Allows for approval of a Peer 2 Peer request without selecting a Contact. “Select Inactive Contacts” must also be enabled to enable this functionality.</inlineHelpText>
    <label>Approve Without Contact</label>
    <type>Checkbox</type>
</CustomField>