force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__P2P_Select_Inactive_Contacts__c.field-meta.xml
<CustomField>
    <fullName>refedge__P2P_Select_Inactive_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows the selection of Contacts who are not Reference Program Members for Reference Programs that do not manage referenceable Contacts. Note that no Contact Request record will be created if the Contact is not a Reference Program Member.</inlineHelpText>
    <label>Select Inactive Contacts</label>
    <type>Checkbox</type>
</CustomField>