force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__P2P_to_Managed_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__P2P_to_Managed_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</inlineHelpText>
    <label>P2P2Managed Change-Requester Chatter</label>
    <type>Checkbox</type>
</CustomField>