force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__P2P_to_Managed_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__P2P_to_Managed_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</description>
    <inlineHelpText>Enables the slaack message sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</inlineHelpText>
    <label>P2P2Managed Change-Requester Slack</label>
    <type>Checkbox</type>
</CustomField>