force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Profile_Created_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Created_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</inlineHelpText>
    <label>Reference Profile Created Email</label>
    <type>Checkbox</type>
</CustomField>