force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Profile_Created_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Created_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</description>
    <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</inlineHelpText>
    <label>Reference Profile Created Slack</label>
    <type>Checkbox</type>
</CustomField>