force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Profile_Creation_from_Ref_Lead_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Creation_from_Ref_Lead_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team when Create Reference Profile is enabled for Reference Lead Finder and a new Reference Profile is created as a result of a Reference Lead.</inlineHelpText>
    <label>Profile Creation via RLF Chatter</label>
    <type>Checkbox</type>
</CustomField>