force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Profile_Update_Reminder_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Update_Reminder_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Chatter sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</description>
    <inlineHelpText>Enables the Chatter sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</inlineHelpText>
    <label>Profile Update Reminder Chatter</label>
    <type>Checkbox</type>
</CustomField>