force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Profile_Update_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Profile_Update_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the email sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</description>
    <inlineHelpText>Enables the email sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</inlineHelpText>
    <label>Profile Update Reminder Email</label>
    <type>Checkbox</type>
</CustomField>