force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Program_Goals_Summary_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Program_Goals_Summary_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Goals Summary Chatter</label>
    <type>Checkbox</type>
</CustomField>