force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Project_Opportunity_Required__c.field-meta.xml
<CustomField>
    <fullName>refedge__Project_Opportunity_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Required</label>
    <type>Checkbox</type>
</CustomField>