force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Project_Owner_Update_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Project_Owner_Update_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the email sent to the requester when the owner changes on a Managed Request.</inlineHelpText>
    <label>Project Owner Update Email</label>
    <type>Checkbox</type>
</CustomField>