force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Project_Owner_Update_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Project_Owner_Update_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the requester when the owner changes on a Managed Request.</description>
    <inlineHelpText>Enables the slack message sent to the requester when the owner changes on a Managed Request.</inlineHelpText>
    <label>Project Owner Update Slack</label>
    <type>Checkbox</type>
</CustomField>