force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Quarantine_updates__c.field-meta.xml
<CustomField>
    <fullName>refedge__Quarantine_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quarantined Refresh updates must be approved by a Reference Manager before they can
be committed</description>
    <inlineHelpText>When checked, Profile Update Details records must be accepted before they are saved to the Reference Profile.</inlineHelpText>
    <label>Quarantine Updates</label>
    <type>Checkbox</type>
</CustomField>