force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Lead_Owner_Update_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Lead_Owner_Update_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</inlineHelpText>
    <label>RLF Owner Update Chatter</label>
    <type>Checkbox</type>
</CustomField>