force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Lead_Owner_Update_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Lead_Owner_Update_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</inlineHelpText>
    <label>RLF Owner Update Email</label>
    <type>Checkbox</type>
</CustomField>