force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Lead_Reminder_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Lead_Reminder_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the reminder Chatter notification sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
    <label>RLF Reminder Chatter</label>
    <type>Checkbox</type>
</CustomField>