force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Lead_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Lead_Reminder_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the reminder email sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
    <label>RLF Reminder Email</label>
    <type>Checkbox</type>
</CustomField>