force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Lead_Reminder_member_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Lead_Reminder_member_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the reminder slack message sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</description>
    <inlineHelpText>Enables the reminder slack message sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
    <label>RLF Reminder - New Contact Slack</label>
    <type>Checkbox</type>
</CustomField>