force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Body__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Body__c</fullName>
    <defaultValue>&quot;The customer reference team is always seeking new ways to showcase client success. Accounts including the ones below have been identified as owned by you and potential candidates for the customer reference program. Do you think they would act as a reference at this time?&quot;</defaultValue>
    <label>Reference Prospector Notification Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>