force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Hdr_Txt__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Hdr_Txt__c</fullName>
    <defaultValue>&quot;Potential Reference Leads&quot;</defaultValue>
    <label>Reference Prospector Leads Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>