force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Lead_Count__c</fullName>
    <inlineHelpText>Count of Prospective Reference Leads (all Reference Leads where “Status” = Request Pending)</inlineHelpText>
    <label>Reference Prospector Lead Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>