force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Subject__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Subject__c</fullName>
    <defaultValue>&quot;Potential Reference Accounts&quot;</defaultValue>
    <label>Ref Prospector Notification Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>