force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Reference_Lead_No_Response_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Lead_No_Response_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Chatter sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</description>
    <inlineHelpText>Enables the Chatter sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</inlineHelpText>
    <label>Reference Lead No Response Chatter</label>
    <type>Checkbox</type>
</CustomField>